--- a/css/styles.css
+++ b/css/styles.css
@@ -20,24 +20,24 @@ html, body {
 hr {
     padding: 5px;
 }
-table, td {
+#tb, #td_logo, #td_summit {
     
     padding-bottom: 2px;
     background-color: white;
     border-radius: 30px;
     
 }
-td {
+#td_logo, #td_summit{
     border:solid black 5px;
 }
 
-/*input, select {*/
-/*    padding: 12px 20px;*/
-/*    margin: 8px 0;*/
-/*    display: inline-block;*/
-/*    border: 1px solid #ccc;*/
-/*    border-radius: 4px;*/
-/*}*/
+input, select {
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
 
 input[type=submit] {
     font-family: sans-serif;
@@ -65,4 +65,41 @@ input[type=submit]:hover {
 #logo {
     border-radius: 30px;
     border-left: thick solid lightgrey;
+}
+
+/* HIDE RADIO */
+[type=radio] { 
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* IMAGE STYLES */
+[type=radio] + img {
+  cursor: pointer;
+}
+
+/* CHECKED STYLES */
+[type=radio]:checked + img {
+  outline: 6px solid #AF780A;
+  border-radius: 50px;
+}
+
+#tb2 {
+    color: black;
+    background-color: lightgrey;
+    border-radius: 50px;
+}
+
+#h2_1 {
+    font: italic small-caps bold 16px/2 cursive;
+    font-weight: 1000;
+    width: 20%;
+    background-color: lightgrey;
+    border-radius: 50px;
+    color: black;
+}
+p {
+    font: italic bold 16px/2 cursive;
 }
